// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should PlayerPlayingControls render correctly Paused 1`] = `
<button
  className="player__play"
  onClick={[Function]}
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      href="#play-s"
    />
  </svg>
  <span>
    Play
  </span>
</button>
`;

exports[`Should PlayerPlayingControls render correctly Playing 1`] = `
<button
  className="player__play"
  onClick={[Function]}
  type="button"
>
  <svg
    height="21"
    viewBox="0 0 14 21"
    width="14"
  >
    <use
      href="#pause"
    />
  </svg>
  <span>
    Pause
  </span>
</button>
`;
